--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="./style/style.css">
-    
-
+    <script src="./script/script.js" defer></script>
     <title>Mario Jump</title>
 </head>
 <body>
     
     <div class="game-board">
-        <script src="./script/script.js" defer></script>
-        <img src="./imagens/mario.gif" class="mario">
         <img src="./imagens/pipe.png" class="pipe">
-
-
+        <img src="./imagens/mario.gif" class="mario">
     </div>
 </body>
 </html>
